# _bth

./: CMakeLists.txt  main.cpp
src/: alexs.hpp  scopr.hpp
